Add chat diagnostics logging and ChatLog for streaming
Replace Log(String) with structured tool lifecycle events (ToolCallStart, ToolRetrieved, ToolReranked, ToolCallEnd) and request lifecycle (RequestInfo, RequestEnd). Remove logConsumer parameter — diagnostics flow through the event stream itself. withDiagnostics() handles console logging and ChatLog persistence by accumulating events, eliminating logMessages/ctxRef/AtomicReference mutable state.

Admin ChatView renders each event type with its own formatting. Smart auto-scroll pauses when user scrolls up.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>