@@ -23,7 +23,7 @@ public final class Utils {
     public static String getDocSourcesAsString(List<Document> documents) {
         return documents.stream()
                 .map(document ->
-                        "(" + String.format("%.3f", document.getScore()) + ") " + getUrlOrSource(document))
+                        "(%.3f) %s".formatted(document.getScore(), getUrlOrSource(document)))
                 .toList()
                 .toString();
     }
@@ -31,7 +31,7 @@ public final class Utils {
     public static String getRerankResultsAsString(List<Reranker.Result> rerankResults) {
         return rerankResults.stream()
                 .map(rr ->
-                        "(" + String.format("%.3f", rr.score()) + ") " + getUrlOrSource(rr.document()))
+                        "(%.3f) %s".formatted(rr.score(), getUrlOrSource(rr.document())))
                 .toList()
                 .toString();
     }
